Fix title of bio on small screen
Adjusted line height

--- a/css/global.less
+++ b/css/global.less
@@ -695,44 +695,45 @@ div.sitelink {
 	}
 img.email {
 	width: 80%;
-	}
+}
 .map {
 	margin-top: 25px;
 	padding-top: 25px;
 	border-top: 1px solid #eee;
 	text-align: center;
 	overflow: hidden;
-	}
+}
 
 /* Bio Timeline */
 .bio .timeline {
 	background: #f8f1e1;
 	background: rgba(181,134,26,.05);
-	}
+}
 .bio .mast {
 	background: #0f0f0f url(i/bio.jpg) top center repeat-x;
 	border-bottom: 12px solid #000;
 	height: 400px;
-	}
+}
 .bio .mast .inside {	
 	text-align: center;
-	}
+}
 .bio .mast p {
 	display: inline-block;
-	margin: 325px auto 0;
+	margin: 300px auto 0;
 	font-size: @fs-xl;
+	line-height: 1.1;
 	color: #fff;
 	padding: 1.5% 2%;
 	background: rgba(0,0,0,.5);
 	font-weight: 300;
-	}
+}
 .timeline {
 	position: relative;
-	}
+}
 .timeline .inside {
 	border-left: 4px solid #e5e0d3;
 	padding: 100px 0 150px 0;
-	}
+}
 .timeline li {
 	position: relative;
 	z-index: 2;
@@ -743,7 +744,7 @@ img.email {
 	border-radius: 5px;
 	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
 	box-shadow: 0 1px 2px rgba(0,0,0,.05);
-	}
+}
 .timeline li:nth-child(even) {
 	margin-left: 55%;
 }
@@ -1150,43 +1151,43 @@ a.medium:active {
 	.idid {
 		display: block;
 		text-align: center;
-		}
+	}
 	.idid img {
 		margin: 0 .1%;
-		}
+	}
 	.work .text, .work section.nobottom {
 		padding-bottom: 25px;
-		}
+	}
 	.work .mast figure {
 		position: static;
-		}
+	}
 	/* Contact Section */
 	.contact .l, .contact .r {
 		float: none;
 		width: 100%;
 		margin: 0;
-		}
+	}
 	.contact .r {
 		margin: 50px 0;
 		padding: 50px 0;
 		border-top: 1px solid #eee;
 		border-bottom: 1px solid #eee;
-		}
+	}
 	img.email {
 		width: 100%;
 		margin-bottom: 50px;
-		}
+	}
 	/* Bio Section */
 	.bio .mast p {
 		margin-top: 150px;
-		}
+	}
 	.timeline .inside {
 		padding: 0;
-		}
+	}
 	.timeline li,
 	.timeline li:nth-child(even) {
 		margin: 50px 10px;
-		width: auto;
+	width: auto;
 		}
 	.timeline li:before,
 	.timeline li:nth-child(even):before {
@@ -1195,7 +1196,7 @@ a.medium:active {
 	}
 	.timeline li img.fluid {
 		width: 100%;
-		}
+	}
 	.timeline li:after {
 		display: none;
 	}
@@ -1211,7 +1212,7 @@ a.medium:active {
 	/* Footer */
 	.footer .inside {
 		text-align: center;
-		}
+	}
 	.footer em {
 		display: block;
 		float: none;
